# actix_simple_project

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  pubsub.rs  redis.rs  test.rs
src/api/: user_api.rs
src/model/: mod.rs  setting_model.rs  user_model.rs
src/repository/: mongodb_repo.rs
